# kotlin-native-demo1

./: .gitignore  CMakeLists.txt  README.md
common/src/main/kotlin/hello/: Hello.kt
math2/: CMakeLists.txt  math2.c  math2.h
src/main/c_interop/: libcurl.def  libmath2.def
src/main/kotlin/: Main.kt
src/test/kotlin/: MainTest.kt  SecondTest.kt
